@@ -161,6 +161,7 @@ public class AntTest extends BuildFileTest {
         if (ae != null) {
             throw ae;
         }
+        project.removeBuildListener(bc);
     }
 
     public void testReferenceInheritance() {
@@ -252,6 +253,20 @@ public class AntTest extends BuildFileTest {
         getProject().removeBuildListener(ic);
     }
 
+    public void testRefId() {
+        PropertyChecker pc = 
+            new PropertyChecker("testprop",
+                                new String[] {null, 
+                                              Path.systemClasspath.toString()});
+        project.addBuildListener(pc);
+        executeTarget("testRefid");
+        AssertionFailedError ae = pc.getError();
+        if (ae != null) {
+            throw ae;
+        }
+        project.removeBuildListener(pc);
+    }
+
     private class BasedirChecker implements BuildListener {
         private String[] expectedBasedirs;
         private int calls = 0;
@@ -271,13 +286,8 @@ public class AntTest extends BuildFileTest {
         public void targetStarted(BuildEvent event) {
             if (error == null) {
                 try {
-                    if (calls == expectedBasedirs.length) {
-                        assertEquals("cleanup",
-                                     event.getTarget().getName());
-                    } else {
-                        assertEquals(expectedBasedirs[calls++],
-                                     event.getProject().getBaseDir().getAbsolutePath());
-                    }
+                    assertEquals(expectedBasedirs[calls++],
+                                 event.getProject().getBaseDir().getAbsolutePath());
                 } catch (AssertionFailedError e) {
                     error = e;
                 }
@@ -403,5 +413,41 @@ public class AntTest extends BuildFileTest {
         }
 
     }
+
+    private class PropertyChecker implements BuildListener {
+        private String[] expectedValues;
+        private String key;
+        private int calls = 0;
+        private AssertionFailedError error;
+
+        PropertyChecker(String key, String[] values) {
+            this.key = key;
+            this.expectedValues = values;
+        }
+
+        public void buildStarted(BuildEvent event) {}
+        public void buildFinished(BuildEvent event) {}
+        public void targetFinished(BuildEvent event){}
+        public void taskStarted(BuildEvent event) {}
+        public void taskFinished(BuildEvent event) {}
+        public void messageLogged(BuildEvent event) {}
+
+        public void targetStarted(BuildEvent event) {
+            if (error == null) {
+                try {
+                    assertEquals(expectedValues[calls++],
+                                 event.getProject().getProperty(key));
+                } catch (AssertionFailedError e) {
+                    error = e;
+                }
+            }
+        }
+
+        AssertionFailedError getError() {
+            return error;
+        }
+
+    }
+
 
 }
